--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>title</title>
+    <title>Giovanni's Blog</title>
   </head>
   <body>
   
+    <p>This is my first blog post, for example</p>
+    
   </body>
 </html>
